--- a/index_config.yaml
+++ b/index_config.yaml
@@ -1,21 +1,40 @@
 test-1dayByCity:
   category_field: city.keyword
-  date_range: 1d
+  from_time: now-1d
+  to_time: now
   geopoint_field: location
   idx: test_geotimedata
   mode: category
   timestamp_field: '@timestamp'
 test-30dayByCountry:
   category_field: country.keyword
-  date_range: 30d
+  from_time: now-30d
+  to_time: now
   geopoint_field: location
   idx: test_geotimedata
   mode: category
   timestamp_field: '@timestamp'
-test-30dayHeat:
+test-1dayHeat:
   category_field: None
-  date_range: 30d
+  from_time: now-1d
+  to_time: now
   geopoint_field: location
   idx: test_geotimedata
   mode: heat
+  timestamp_field: '@timestamp'
+test-allHeat:
+  category_field: ''
+  to_time: now
+  geopoint_field: location
+  idx: test_geotimedata
+  justification: Software Dev
+  mode: heat
+  timestamp_field: '@timestamp'
+  lucene_query: 'country: "United States"' 
+test-allByCountry:
+  category_field: country.keyword
+  to_time: now
+  geopoint_field: location
+  idx: test_geotimedata
+  mode: category
   timestamp_field: '@timestamp'
