refact/feat: add support for gunicorn/uwsgi deployment
1) Refactor configuration handling
2) Use application factory patterns and blueprints
3) Replace global flask_app global with current_app

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.7
 LABEL maintainer="mastley@spectric.com" \
       version="0.0.2"
 
-COPY pip.conf /root/.pip/pip.conf
+COPY deployment/pip.conf /root/.pip/pip.conf
 
 RUN mkdir -p /opt/elastic_datashader/tms_cache
 
@@ -10,6 +10,7 @@ ADD requirements.txt /opt/elastic_datashader
 
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r /opt/elastic_datashader/requirements.txt
+RUN pip install gunicorn
 
 ADD tms_pixellock.py /opt/elastic_datashader
 ADD datashader_helpers.py /opt/elastic_datashader
@@ -19,4 +20,13 @@ ADD data_shader.patch /var/tmp
 RUN patch -p1 -d /usr/local/lib/python3.7/site-packages/datashader/transfer_functions < /var/tmp/data_shader.patch
 VOLUME ["/opt/elastic_datashader/tms-cache"]
 
-ENTRYPOINT ["/opt/elastic_datashader/tms_pixellock.py", "-f", "/opt/elastic_datashader/tms-cache/index_config.yaml", "-d", "/opt/elastic_datashader/tms-cache"]
+COPY deployment/gunicorn_config.py /opt/elastic_datashader
+COPY index_config.yaml /opt/elastic_datashader/tms-cache/index_config.yaml
+
+ENTRYPOINT [ "gunicorn", \
+    "--chdir", "/opt/elastic_datashader", \
+    "-c", "/opt/elastic_datashader/gunicorn_config.py", \
+    "--env", "DATASHADER_INDEX_CONFIG_FILE=/opt/elastic_datashader/tms-cache/index_config.yaml", \
+    "--env", "DATASHADER_CACHE_DIR=/opt/elastic_datashader/tms-cache", \
+    "tms_pixellock:create_app()" \
+]
