--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Test siglib
+name: Test tms_pixellock
 
 on:
   push:
@@ -30,5 +30,4 @@ jobs:
         pip install -r requirements.txt -r requirements-dev.txt
     - name: Test with pytest
       run: |
-        pip install -e .
         python -m pytest
