--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -29,5 +29,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt -r requirements-dev.txt
     - name: Test with pytest
-      run: |
-        python -m pytest
+      run: NUMBA_DISABLE_JIT=1 python -m pytest
