chore: replace data_shader.patch with datashader==0.11.0a4

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -8,19 +8,17 @@ RUN mkdir -p /opt/elastic_datashader/tms_cache
 
 COPY requirements.txt /opt/elastic_datashader
 
-RUN pip install --upgrade pip
-RUN pip install --no-cache-dir -r /opt/elastic_datashader/requirements.txt
-RUN pip install gunicorn
+RUN pip install --upgrade pip && \
+    pip install wheel && \
+    pip install --no-cache-dir -r /opt/elastic_datashader/requirements.txt && \
+    pip install gunicorn
 
 COPY tms_datashader.py /opt/elastic_datashader
 COPY tms_datashader_api /opt/elastic_datashader/tms_datashader_api
 COPY templates /opt/elastic_datashader/templates
-COPY data_shader.patch /var/tmp
-
-RUN patch -p1 -d /usr/local/lib/python3.7/site-packages/datashader/transfer_functions < /var/tmp/data_shader.patch
-VOLUME ["/opt/elastic_datashader/tms-cache"]
-
 COPY deployment/gunicorn_config.py /opt/elastic_datashader
+
+VOLUME ["/opt/elastic_datashader/tms-cache"]
 
 ENTRYPOINT [ "gunicorn", \
     "--chdir", "/opt/elastic_datashader", \
