--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask
 elasticsearch
 elasticsearch_dsl
 pyOpenSSL
-git+git://github.com/holoviz/datashader@v0.11.0rc1
+datashader==0.11.0
 pandas
 colorcet
 mercantile
@@ -12,7 +12,7 @@ Pillow
 pynumeral
 arrow
 python-datemath
-numba
+numba==0.48.0
 numpy
 urllib3
 pyyaml
