--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ elasticsearch
 elasticsearch_dsl
 pyOpenSSL
 datashader==0.11.0
-pandas
+pandas==1.2.0
 colorcet
 mercantile
 pypng
@@ -13,6 +13,6 @@ pynumeral
 arrow
 python-datemath
 numba==0.48.0
-numpy
+numpy==1.19.5
 urllib3
 pyyaml
