--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "elastic_datashader"
-version = "0.0.4"
+version = "0.0.5"
 description = "Elastic-Datashader TMS Server"
 authors = ["Spectric Labs <foss@spectric.com>"]
 license = "Apache-2.0"
@@ -14,9 +14,6 @@ classifiers = [
 
 [tool.poetry.scripts]
 tms_datashader = "elastic_datashader.cli:main"
-
-[tool.poetry.extras]
-apm = ["elasticapm"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -38,11 +35,17 @@ numba = "0.48.0"
 numpy = "1.19.5"
 urllib3 = "^1.26.8"
 PyYAML = "^6.0"
+gunicorn = {version = "^20.1.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
 black = "^21.12b0"
+pylint = "^2.12.2"
+
+[tool.poetry.extras]
+apm = ["elasticapm"]
+localwebserver = ["gunicorn"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
