--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ numpy = "1.19.5"
 urllib3 = "^1.26.8"
 PyYAML = "^6.0"
 gunicorn = {version = "^20.1.0", optional = true}
+humanize = "^3.13.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
