--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Test tms_datashader
+name: Test elastic_datashader
 
 on:
   push:
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt -r requirements-dev.txt
+        pip install poetry
+        poetry install
     - name: Test with pytest
-      run: NUMBA_DISABLE_JIT=1 python -m pytest
+      run: NUMBA_DISABLE_JIT=1 pytest
