--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
 elastic_datashader = "elastic_datashader.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.6,<4.0"
 Flask = "^2.0.2"
 elasticsearch = "^7.16.3"
 elasticsearch-dsl = "^7.4.0"
