--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,32 +17,32 @@ elastic_datashader = "elastic_datashader.cli:main"
 
 [tool.poetry.dependencies]
 python = ">=3.6,<4.0"
-Flask = ">=2.0"
-elasticsearch = ">=7.16.3"
-elasticsearch-dsl = ">=7.4.0"
-pyOpenSSL = ">=21.0.0"
+Flask = ">=2"
+elasticsearch = ">=7.16"
+elasticsearch-dsl = ">=7.4"
+pyOpenSSL = ">=21"
 datashader = ">=0.11.0"
 pandas = ">=1.2.0"
 colorcet = ">=3.0.0"
 mercantile = ">=1.2.1"
 pypng = ">=0.0.21"
-Flask-APScheduler = ">=1.12.3"
-Pillow = ">=9.0.0"
+Flask-APScheduler = ">=1.12"
+Pillow = ">=9"
 pynumeral = ">=0.1.2"
-arrow = ">=1.2.1"
-python-datemath = ">=1.5.5"
-numba = ">=0.48.0"
-numpy = ">=1.19.5"
-urllib3 = ">=1.26.8"
+arrow = ">=1.2"
+python-datemath = ">=1.5"
+numba = ">=0.48"
+numpy = ">=1.19"
+urllib3 = ">=1.26"
 PyYAML = ">=6.0"
 gunicorn = {version = ">=20.1.0", optional = true}
-humanize = ">=3.13.1"
+humanize = ">=3"
 
 [tool.poetry.dev-dependencies]
-pytest = ">=6.2.5"
-pytest-cov = ">=3.0.0"
-black = ">=21.12b0"
-pylint = ">=2.12.2"
+pytest = ">=6"
+pytest-cov = ">=3"
+black = ">=21"
+pylint = ">=2"
 
 [tool.poetry.extras]
 apm = ["elasticapm"]
