--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,33 +16,37 @@ classifiers = [
 elastic_datashader = "elastic_datashader.cli:main"
 
 [tool.poetry.dependencies]
-python = ">=3.6,<4.0"
+python = ">=3.8,<4"
 Flask = ">=2"
 elasticsearch = ">=7.16"
 elasticsearch-dsl = ">=7.4"
-pyOpenSSL = ">=21"
+pyOpenSSL = "*"
 datashader = ">=0.11.0"
-pandas = ">=1.2.0"
-colorcet = ">=3.0.0"
-mercantile = ">=1.2.1"
-pypng = ">=0.0.21"
-Flask-APScheduler = ">=1.12"
-Pillow = ">=9"
-pynumeral = ">=0.1.2"
-arrow = ">=1.2"
-python-datemath = ">=1.5"
-numba = ">=0.48"
+pandas = "*"
+colorcet = "*"
+mercantile = ">=1.2"
+pypng = "*"
+Flask-APScheduler = "*"
+Pillow = "*"
+pynumeral = "*"
+arrow = "*"
+python-datemath = "*"
+numba = "*"
 numpy = ">=1.19"
-urllib3 = ">=1.26"
-PyYAML = ">=6.0"
-gunicorn = {version = ">=20.1.0", optional = true}
-humanize = ">=3"
+urllib3 = "*"
+PyYAML = "*"
+humanize = "*"
+gunicorn = {version = "*", optional = true}
 
 [tool.poetry.dev-dependencies]
-pytest = ">=6"
-pytest-cov = ">=3"
-black = ">=21.12b0"
-pylint = ">=2"
+pytest = "*"
+pytest-cov = "*"
+black = "*"
+pylint = "*"
+
+[tool.pytest.ini_options]
+addopts = "-ra"
+testpaths = ["tests"]
 
 [tool.poetry.extras]
 apm = ["elasticapm"]
@@ -51,3 +55,22 @@ localwebserver = ["gunicorn"]
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+envlist = py38,py39
+isolated_build = true
+
+[gh-actions]
+python =
+	3.8: py38
+	3.9: py39
+
+[testenv]
+deps =
+	pytest
+
+commands =
+	pytest
+"""
