Tox was trying to test Python 3.8 in a 3.9 env on GitHub.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py38,py39
+envlist = py38
 isolated_build = true
 
 [gh-actions]
