--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,5 +77,5 @@ deps =
 
 commands =
 	pylint --disable=R,C,fixme elastic_datashader
-	pytest --cov=elastic_datashader
+	pytest --cov-report term-missing --cov=elastic_datashader
 """
