Had to disable some pylint errors because of the way elasticsearch uses _rewrite_parameters.  Also had to limit the numpy version to make numba happy.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ pynumeral = "*"
 arrow = "*"
 python-datemath = "*"
 numba = "*"
-numpy = ">=1.19"
+numpy = ">=1.19,<=1.21"
 PyYAML = "*"
 humanize = "*"
 uvicorn = {extras = ["standard"], version = "*", optional = true}
