Moved expanded bounding box generation into the georgio package, using spherical calculations instead of distorted Web Mercator cartesian.  Moved constants into their own file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ PyYAML = "*"
 humanize = "*"
 uvicorn = {extras = ["standard"], version = "*", optional = true}
 fastapi = "^0.73.0"
+georgio = "^2022.84.833"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
