--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install tox
+        python -m pip install tox tox-gh-actions
     - name: Test with pytest
-      run: NUMBA_DISABLE_JIT=1 python -m tox
+      run: NUMBA_DISABLE_JIT=1 tox
