Fixed uvicorn configuration.

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -11,20 +11,22 @@ RUN poetry build
 
 FROM python:3.9 AS deployment
 LABEL maintainer="foss@spectric.com" \
-      version="0.0.5"
+      version="0.0.6"
 
-RUN mkdir -p /opt/elastic_datashader/tms-cache
 COPY --from=builder /build/dist/*.whl /opt/elastic_datashader/
-RUN pip install --upgrade pip && \
+RUN mkdir -p /opt/elastic_datashader/tms-cache && \
+    pip install --upgrade pip && \
     pip install --no-cache-dir /opt/elastic_datashader/*.whl && \
     pip install uvicorn
 
 COPY deployment/logging_config.yml /opt/elastic_datashader
 
 VOLUME ["/opt/elastic_datashader/tms-cache"]
-ENV DATASHADER_CACHE_DIR=/opt/elastic_datashader/tms-cache
+ENV DATASHADER_CACHE_DIRECTORY=/opt/elastic_datashader/tms-cache
 
 ENTRYPOINT [ "uvicorn", \
     "elastic_datashader:app", \
-    "--log-config", "/opt/elastic_datashader/logging_config.yml"
+    "--host", "0.0.0.0", \
+    "--port", "8080", \
+    "--log-config", "/opt/elastic_datashader/logging_config.yml" \
 ]
