--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Test elastic_datashader
+name: "Build, Test, and Publish"
 
 on:
   push:
@@ -9,9 +9,12 @@ on:
   pull_request:
     branches: [ master ]
 
-jobs:
-  build:
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
+jobs:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -31,3 +34,32 @@ jobs:
         python -m pip install tox tox-gh-actions
     - name: Test with pytest
       run: NUMBA_DISABLE_JIT=1 tox
+
+  build-and-push-image:
+    needs: test
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+    - name: Create timestamp env
+      run: echo "timestamp=$(date -utc +%Y%m%d%H%M%S)" >> $GITHUB_ENV
+      shell: bash
+    - uses: actions/checkout@v2
+    - uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      id: meta
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.timestamp }}
+    - uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
