--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,6 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: elastic_datashader
 
 jobs:
   test:
@@ -56,7 +55,7 @@ jobs:
     - uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       id: meta
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.timestamp }}
+        images: ${{ env.REGISTRY }}/elastic_datashader:${{ env.timestamp }}
     - uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       with:
         context: .
