--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,20 +43,19 @@ jobs:
       packages: write
 
     steps:
-    - name: Create timestamp env
-      run: echo "timestamp=$(date -utc +%Y%m%d%H%M%S)" >> $GITHUB_ENV
-      shell: bash
     - uses: actions/checkout@v2
-    - uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+    - uses: docker/login-action@v2
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+    - uses: docker/metadata-action@v4
       id: meta
       with:
-        images: ${{ env.REGISTRY }}/elastic_datashader:${{ env.timestamp }}
-    - uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        images: ${{ env.REGISTRY }}/elastic_datashader
+        tags: |
+          type=schedule,pattern={{date 'YYYYMMDDHHmmss'}}
+    - uses: docker/build-push-action@v3
       with:
         context: .
         push: true
