--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,7 +55,7 @@ jobs:
     - uses: docker/metadata-action@v4
       id: meta
       with:
-        images: ${{ env.REGISTRY }}/elastic_datashader
+        images: ${{ env.REGISTRY }}/spectriclabs/elastic_datashader
         tags: |
           type=raw,value=${{ env.timestamp }}
     - uses: docker/build-push-action@v3
