--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+#kibana plugin build targets
+/build
+/target
+
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
