--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 elastic_datashader = "elastic_datashader.cli:main"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4"
+python = ">=3.10,<4"
 elasticsearch = "7.17.4"
 elasticsearch-dsl = "7.4.0"
 datashader = "0.14.2"
@@ -33,11 +33,11 @@ pynumeral = "*"
 arrow = "*"
 python-datemath = "*"
 numba = "*"
-numpy = ">=1.19,<=1.21"
+numpy = "^1.23"
 PyYAML = "*"
 humanize = "*"
 uvicorn = {extras = ["standard"], version = "^0.18.2", optional = true}
-fastapi = "^0.73.0"
+fastapi = "^0.86"
 georgio = "2022.225.1340"
 
 [tool.poetry.dev-dependencies]
@@ -64,13 +64,13 @@ line-length = 150
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py39
+envlist = py310
 isolated_build = true
 recreate = true
 
 [gh-actions]
 python =
-	3.9: py39
+	3.10: py310
 
 [testenv]
 setenv =
