--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ python = ">=3.10,<4"
 elasticsearch = "7.17.4"
 elasticsearch-dsl = "7.4.0"
 datashader = "0.14.2"
-pandas = "*"
-colorcet = "*"
+pandas = "^1.5.3"
+colorcet = "^3.0.1"
 mercantile = "1.2.1"
 pypng = "*"
 Pillow = "*"
@@ -38,7 +38,7 @@ PyYAML = "*"
 humanize = "*"
 uvicorn = {extras = ["standard"], version = "^0.18.2", optional = true}
 fastapi = "^0.86"
-georgio = "2022.335.152"
+georgio = "2023.119.77"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
