--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ elastic_datashader = "elastic_datashader.cli:main"
 python = ">=3.10,<4"
 elasticsearch = "7.17.4"
 elasticsearch-dsl = "7.4.0"
-datashader = "0.14.2"
+datashader = "0.15.0"
 pandas = "^1.5.3"
 colorcet = "^3.0.1"
 mercantile = "1.2.1"
@@ -32,13 +32,14 @@ Pillow = "*"
 pynumeral = "*"
 arrow = "*"
 python-datemath = "*"
-numba = "0.56.4"
+numba = "0.57.0"
 numpy = "^1.23"
 PyYAML = "*"
 humanize = "*"
 uvicorn = {extras = ["standard"], version = "^0.18.2", optional = true}
-fastapi = "^0.86"
-georgio = "2023.119.77"
+fastapi = "^0.96"
+georgio = "2023.156.924"
+jinja2 = "3.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
@@ -64,13 +65,14 @@ line-length = 150
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py310
+envlist = py311
 isolated_build = true
 recreate = true
 
 [gh-actions]
 python =
 	3.10: py310
+	3.11: py311
 
 [testenv]
 setenv =
