--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,9 @@ elastic_datashader = "elastic_datashader.cli:main"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4"
-elasticsearch = "7.17.4"
-elasticsearch-dsl = "7.4.0"
-datashader = "0.15.2"
+elasticsearch = "8.11.1"
+elasticsearch-dsl = "8.11.0"
+datashader = "0.16.0"
 pandas = "^1.5.3"
 colorcet = "^3.0.1"
 mercantile = "1.2.1"
@@ -32,11 +32,11 @@ Pillow = "*"
 pynumeral = "*"
 arrow = "*"
 python-datemath = "*"
-numba = "0.57.0"
+numba = "0.57.1"
 numpy = "^1.23"
 PyYAML = "*"
 humanize = "*"
-uvicorn = {extras = ["standard"], version = "^0.18.2", optional = true}
+uvicorn = {extras = ["standard"], version = "0.24.0", optional = true}
 fastapi = "^0.96"
 georgio = "2023.156.924"
 jinja2 = "3.1.2"
