--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ numpy = "^1.23"
 PyYAML = "*"
 humanize = "*"
 uvicorn = {extras = ["standard"], version = "0.24.0", optional = true}
-fastapi = "^0.96"
+fastapi = ">=0.109.1"
 georgio = "2023.156.924"
 jinja2 = "3.1.2"
 
